  #852
  (Max Mouratov)
- Documentation of List.append and List.concat should not include invalid
  estimates of stack usage.
  #854
  (Max Mouratov)
- Implementation of String should use unsafe versions of [set] and [get].
  #836
  (Max Mouratov, review by Gabriel Scherer)
- Fix erroneous mentions of [Different_list_size] in List.mli.
  #857, #744
  (Max Mouratov, reported by Christoph Höger)

## v2.8.0 (minor release)

This minor release supports the -safe-string mode for OCaml
compilation, enforcing a type-level separation between (immutable)
strings and mutable byte sequences.

- support -safe-string compilation
  #673
  (Gabriel Scherer)

- Support for the upcoming OCaml release 4.06
  (Gabriel Scherer)

## v2.7.0 (minor release)

This minor release is the first to support OCaml 4.05.0. As with
previous OCaml versions, we backported new 4.05.0 convenience function
from the compiler stdlib, allowing Batteries user to use them with
older OCaml versions, and thus write backward-compatible code. In
particular, the new *_opt functions returning option values instead of
exceptions are all backported.

- BatNum: fix of_float_string to handle negative numbers properly
  #780
  (Anton Yabchinskiy)

- added BatArray.min_max
  #757
  (Francois Berenger)

- added a Label module to BatVect
  #763
  (Varun Gandhi, review by Francois Berenger, Gabriel Scherer, Thibault Suzanne)

- fix documentation of BatVect.insert to match (correct) implementation
  #766, #767
  (Gabriel Scherer, report by Varun Gandhi)

- avoid using exceptions for internal control-flow
  #768, #769
    This purely internal change should improve performances when using
    js_of_ocaml, which generates much slower code for local exceptions
    raising/catching than the native OCaml backend.
    Internal exceptions (trough the BatReturn label) have been removed
    from the modules BatString, BatSubstring and BatVect.
  (Gabriel Scherer, request and review by Clément Pit-Claudel)
